--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Title and Favicon -->
     <title>Symptom Checker</title>
-    <link rel="icon" type="image/png" href="/icon-192x192.png" />
+    <link rel="icon" type="image/png" href="/react.svg" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.webmanifest" />
@@ -19,7 +19,7 @@
     />
 
     <!-- Apple Touch Icon for iOS -->
-    <link rel="apple-touch-icon" href="/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/react.svg" />
 
     <!-- Meta for iOS Safari PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
